# Truck-Platoon-2

./: trailer_watcher.py
truck_control/: package.xml  setup.py
truck_control/matlab/: eplatoon_power_step.m  init_ev_model.m  reset_ev_model.m  step_ev_model.m
truck_control/truck_control/: carla_spectator_follower.py  command_publisher.py  distance_sensor.py  energy_dashboard.py  energy_monitor.py  energy_soc_bridge.py  lane_detect.py  lane_following_node.py  pid_dashboard.py  platooning_manager.py  plot_soc_history.py  set_location.py
truck_platooning/: CMakeLists.txt  package.xml
truck_platooning/src/: carla_pose_publisher.py  command_publisher.hpp  distance_sensor.hpp  lane_detect.hpp  lane_following_node.cpp  pid_controller.hpp  platooning_manager.hpp
