<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>truck_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tmo@todo.todo">tmo</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>v2v_interfaces</depend>
  

  <exec_depend>python3-sensor-msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>opencv</exec_depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
